give Cargo some more memory to run the application
git-svn-id: https://svn.apache.org/repos/asf/archiva/trunk@1091632 13f79535-47bb-0310-9956-ffa450edef68